Fixed the janky white space on homepage in mobile view

--- a/app/assets/stylesheets/spree/frontend/all.scss
+++ b/app/assets/stylesheets/spree/frontend/all.scss
@@ -43,6 +43,7 @@ footer, .push {
 	background-color: #d9d9d9;
 	min-height: 355px;
 	height: auto;
+	overflow-y: hidden;
 }
 
 @media only screen and (max-width: 650px) { 
